Оптимизация картинок для лучшей загрузки сайта

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <div class="paper-info">
 <div class="paper-title">Расследование недели: сколько<br> зарабатывает веб разработчик в Москве</div>
       <div class="button paper-button">Читать статью
-        <svg class="paper-button_icon">
+        <svg class="paper-button__icon">
           <use xlink:href="img/sprite.svg#arrow-right"></use>
         </svg>
       </div>
